<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMy</string>
    <string name="title_activity_main">Find My&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>


    <string name="button_unicon">Unicorn</string>
    <string name="button_myself">&#8230;self!</string>
    <string name="button_special">Special</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>

    <string name="unicorn_button_text">
        <![CDATA[
            <font color="#CC0000">U</font>
            <font color="#FFCC00">n</font>
            <font color="#FFDE00">i</font>
            <font color="#097054">c</font>
            <font color="#000080">o</font>
            <font color="#8C489F">r</font>
            <font color="#443266">n</font>
        ]]>
    </string>

    <!--Unicorn names-->
    <string name="nm_unicorn1">Lily</string>
    <string name="nm_unicorn2">Windflower</string>
    <string name="nm_unicorn3">Rose</string>
    <string name="nm_unicorn4">Violet</string>
    <string name="nm_unicorn5">Nightshade</string>
    <string name="nm_unicorn6">Ivy</string>
    <string name="nm_unicorn7">Marigold</string>
    <string name="nm_unicorn8">Poppy</string>

    <!--Unicorn snippets-->
    <string name="ds_unicorn1">Lily is generous of spirit and always thinks the best of others. She is as sweet as candy, and she casts spells of plenty and bounty</string>
    <string name="ds_unicorn2">Windflower is silly and lovable. She is as sweet as a sugar lump, and she brings great fortune and riches</string>
    <string name="ds_unicorn3">Rose is wistful and creative. She is pink like the sunset, and she brings great fortune and riches</string>
    <string name="ds_unicorn4">Violet loves to look after the other unicorns. She is bonny and bright as the breeze, and she brings the sunshine and chases away clouds</string>
    <string name="ds_unicorn5">Nightshade is often very naughty and is always being told off. She is a darling horse, spotty like a Dalmatian, and she dances away the thunderstorms</string>
    <string name="ds_unicorn6">Ivy is loving and thoughtful. She is as white as the driven snow, and she casts magical spells</string>
    <string name="ds_unicorn7">Marigold is as sweet as a Shetland pony. She is silver like the moonlight, and she changes the weather</string>
    <string name="ds_unicorn8">Poppy is quick-witted and bright as a spark. She is as lovely as the day is long, and she makes wishes into horses</string>

    <!--FetchAddress error messages-->
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid lat_long_used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="mm_name">Name</string>
    <string name="mm_snippet">Snippet</string>


</resources>
